name:                analytics
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/analytics#readme
license:             BSD3
license-file:        LICENSE
author:              Garrett Mosier
maintainer:          example@example.com
copyright:           2019 Garrett Mosier
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable analytics
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       scotty,
                       aeson,
                       http-types
  other-modules:       Types,
                       DataProcessing
